k8s/gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  labels:
    app.kubernetes.io/name: gateway
    app.kubernetes.io/part-of: exam-study-app
